fixed bg on mobile hopefully

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
 
 html  {
-  background-image: url('https://static.pexels.com/photos/414171/pexels-photo-414171.jpeg');
+  background-image: url('https://static.pexels.com/photos/414171/pexels-photo-414171.jpeg') no-repeat center center fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
